# backend/src/invitations/dto/accept-invitation-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class AcceptInvitationResponseDto {
+  @ApiProperty()
+  splitId!: string;
+}
